# CMakeTutorial

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp
cmake/: CustomMacro.cmake  cmake_config.cmake  test_cmake.cmake
scripts/: build.bat  build.sh
