
add_library(MathFunctions MathFunctions.cpp)

install(TARGETS MathFunctions CONFIGURATIONS Release DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE})
install(FILES MathFunctions.h  CONFIGURATIONS Release DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/include)

install(TARGETS MathFunctions CONFIGURATIONS Debug DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG})
install(FILES MathFunctions.h  CONFIGURATIONS Debug DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/include)